[#263] - Fix overview's widgets tooltips

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -31,6 +31,7 @@
 @import '~bootstrap/less/tables.less';
 @import '~bootstrap/less/forms.less';
 @import '~bootstrap/less/buttons.less';
+@import '~bootstrap/less/tooltip.less';
 
 // Bootstrap utilities (needed for mixins like .pull-left())
 @import '~bootstrap/less/utilities.less';
