--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -31,7 +31,6 @@
 @import '~bootstrap/less/tables.less';
 @import '~bootstrap/less/forms.less';
 @import '~bootstrap/less/buttons.less';
-@import '~bootstrap/less/tooltip.less';
 
 // Bootstrap utilities (needed for mixins like .pull-left())
 @import '~bootstrap/less/utilities.less';
@@ -118,6 +117,7 @@
 @import 'components/rating.css';
 @import 'components/rating-actions.css';
 @import 'components/timeline.css';
+@import 'components/tooltip.css';
 
 // Import utilities
 @import 'icons/icons.css';
