--- a/templates/Includes/filter_sidebar.html.twig
+++ b/templates/Includes/filter_sidebar.html.twig
@@ -14,7 +14,7 @@
             <div class="sidebar-category">
 
                 <div class="category-title">
-                    <span>{{ 'map_index.filter.title'|trans }}</span>
+                    <span>{{ 'filters.title'|trans }}</span>
                 </div>
 
                 <input id="form-user" name="filters[user]" type="hidden"
@@ -25,13 +25,13 @@
                 <input type="hidden" name="page" value="1">
 
                 <div class="category-content">
-                    
+
                     {# Status Filter #}
                     {% if filterConfig.excluded_filters is not defined or 'status' not in filterConfig.excluded_filters %}
                     <div class="form-group toggle-switch-form-group" data-controller="toggle-switch">
                         <div class="checkbox">
                             <label class="display-block">
-                                {{ 'map_index.filter.status'|trans }}
+                                {{ 'filters.status'|trans }}
                                 <input name="filters[status]" type="checkbox" data-toggle-switch-target="checkbox" data-action="toggle-switch#toggle"
                                        {% if filters.status is defined and filters.status == "on" %} checked{% endif %}>
                             </label>
@@ -44,32 +44,32 @@
                     <div class="form-group toggle-switch-form-group" data-controller="toggle-switch">
                         <div class="checkbox">
                             <label class="display-block">
-                                {{ 'map_index.filter.new'|trans }}
+                                {{ 'filters.new'|trans }}
                                 <input name="filters[new]" type="checkbox" data-toggle-switch-target="checkbox" data-action="toggle-switch#toggle"
                                        {% if filters.new is defined and filters.new == "on" %} checked{% endif %}>
                             </label>
                         </div>
                     </div>
                     {% endif %}
-                    
+
                     {% if filterConfig.excluded_filters is not defined or 'kiddie' not in filterConfig.excluded_filters %}
                     <div class="form-group toggle-switch-form-group" data-controller="toggle-switch">
                         <div class="checkbox">
                             <label class="display-block">
-                                {{ 'map_index.filter.kiddie'|trans }}
+                                {{ 'filters.kiddie'|trans }}
                                 <input name="filters[kiddie]" type="checkbox" data-toggle-switch-target="checkbox" data-action="toggle-switch#toggle"
                                        {% if filters.kiddie is defined and filters.kiddie == "on" %} checked{% endif %}>
                             </label>
                         </div>
                     </div>
                     {% endif %}
-                    
+
                     {# User-specific Filter #}
                     {% if (filterConfig.excluded_filters is not defined or 'notridden' not in filterConfig.excluded_filters) and filters.ridden is not defined %}
                     <div class="form-group toggle-switch-form-group" data-controller="toggle-switch">
                         <div class="checkbox">
                             <label class="display-block">
-                                {{ 'map_index.filter.notridden'|trans }}
+                                {{ 'filters.notridden'|trans }}
                                 <input name="filters[notridden]" type="checkbox" data-toggle-switch-target="checkbox" data-action="toggle-switch#toggle"
                                     {% if not is_granted('ROLE_USER') %} disabled="disabled"{% endif %}
                                     {% if filters.notridden is defined and filters.notridden == "on" %} checked{% endif %}>
@@ -77,33 +77,33 @@
                         </div>
                     </div>
                     {% endif %}
-                    
+
                     {# Name Filter - Search first #}
                     {% if filterConfig.excluded_filters is not defined or 'name' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <input type="text" class="form-control" name="filters[name]"
                                value="{{ filters.name|default('') }}"
-                               placeholder="{{ 'map_index.filter.name'|trans }}">
+                               placeholder="{{ 'filters.name'|trans }}">
                     </div>
                     {% endif %}
-                    
+
                     {# Score Filter - Important metric #}
                     {% if filterConfig.excluded_filters is not defined or 'score' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[score]">
-                            <option value="">{{ 'map_index.filter.score'|trans }}</option>
+                            <option value="">{{ 'filters.score'|trans }}</option>
                             {% for i in range(10, 90, 10) %}
-                                <option value="{{ i }}" {% if filters.score is defined and filters.score == i %}selected{% endif %}>{{ 'map_index.filter.atleast'|trans({'count': i}) }}</option>
+                                <option value="{{ i }}" {% if filters.score is defined and filters.score == i %}selected{% endif %}>{{ 'filters.atleast'|trans({'count': i}) }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {# Location Filters #}
                     {% if filterConfig.excluded_filters is not defined or 'continent' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[continent]">
-                            <option value="">{{ 'coaster_ranking.filter.continent'|trans }}</option>
+                            <option value="">{{ 'filters.continent'|trans }}</option>
                             {% if filtersForm.continent is defined %}
                                 {% for continent in filtersForm.continent %}
                                     <option value="{{ continent.id }}" {% if filters.continent is defined and filters.continent == continent.id %}selected{% endif %}>{{ continent.name|trans({}, 'database') }}</option>
@@ -112,11 +112,11 @@
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {% if filterConfig.excluded_filters is not defined or 'country' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[country]">
-                            <option value="">{{ 'coaster_ranking.filter.country'|trans }}</option>
+                            <option value="">{{ 'filters.country'|trans }}</option>
                             {% if filtersForm.country is defined %}
                                 {% for country in filtersForm.country %}
                                     <option value="{{ country.id }}" {% if filters.country is defined and filters.country == country.id %}selected{% endif %}>{{ country.name|trans({}, 'database') }}</option>
@@ -125,23 +125,23 @@
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {# Manufacturer & Model - Related to coaster type #}
                     {% if filterConfig.excluded_filters is not defined or 'manufacturer' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[manufacturer]">
-                            <option value="">{{ 'map_index.filter.manufacturer'|trans }}</option>
+                            <option value="">{{ 'filters.manufacturer'|trans }}</option>
                             {% for manufacturer in filtersForm.manufacturer %}
                                 <option value="{{ manufacturer.id }}" {% if filters.manufacturer is defined and filters.manufacturer == manufacturer.id %}selected{% endif %}>{{ manufacturer.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {% if filterConfig.excluded_filters is not defined or 'model' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[model]">
-                            <option value="">{{ 'coaster_ranking.filter.model'|trans }}</option>
+                            <option value="">{{ 'filters.model'|trans }}</option>
                             {% if filtersForm.model is defined %}
                                 {% for model in filtersForm.model %}
                                     <option value="{{ model.id }}" {% if filters.model is defined and filters.model == model.id %}selected{% endif %}>{{ model.name }}</option>
@@ -150,12 +150,12 @@
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {# Coaster Characteristics #}
                     {% if filterConfig.excluded_filters is not defined or 'materialType' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[materialType]">
-                            <option value="">{{ 'coaster_ranking.filter.materialType'|trans }}</option>
+                            <option value="">{{ 'filters.materialType'|trans }}</option>
                             {% if filtersForm.materialType is defined %}
                                 {% for type in filtersForm.materialType %}
                                     <option value="{{ type.id }}" {% if filters.materialType is defined and filters.materialType == type.id %}selected{% endif %}>{{ type.name|trans({}, 'database') }}</option>
@@ -164,11 +164,11 @@
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {% if filterConfig.excluded_filters is not defined or 'seatingType' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[seatingType]">
-                            <option value="">{{ 'coaster_ranking.filter.seatingType'|trans }}</option>
+                            <option value="">{{ 'filters.seatingType'|trans }}</option>
                             {% if filtersForm.seatingType is defined %}
                                 {% for type in filtersForm.seatingType %}
                                     <option value="{{ type.id }}" {% if filters.seatingType is defined and filters.seatingType == type.id %}selected{% endif %}>{{ type.name|trans({}, 'database') }}</option>
@@ -177,22 +177,22 @@
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {% if filterConfig.excluded_filters is not defined or 'openingDate' not in filterConfig.excluded_filters %}
                     <div class="form-group">
                         <select class="form-control" name="filters[openingDate]">
-                            <option value="">{{ 'map_index.filter.openingDate'|trans }}</option>
+                            <option value="">{{ 'filters.openingDate'|trans }}</option>
                             {% for openingDate in filtersForm.openingDate %}
                                 <option value="{{ openingDate.year }}" {% if filters.openingDate is defined and filters.openingDate == openingDate.year %}selected{% endif %}>{{ openingDate.year }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     {% endif %}
-                    
+
                     {# Clear Filters Button #}
                     <div class="form-group">
                         <button type="button" class="btn btn-default btn-block" onclick="window.location.href = window.location.pathname;">
-                            {{ 'map_index.filter.clear'|trans }}
+                            {{ 'filters.clear'|trans }}
                         </button>
                     </div>
                 </div>
